# grace

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  environment-napari-free.yaml  environment-with-napari.yaml  environment.yaml  environment.yml  environment_annotation.yml  graph_cutting_demo.ipynb  graph_search.ipynb  opt.ipynb  pyproject.toml  requirements.txt  search.py  setup.cfg  train_and_infer.ipynb  util.py
.github/: PULL_REQUEST_TEMPLATE.md  pr_review_guideline.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  method_development.md
.github/workflows/: deploy.yml  workflow.yml
.ipynb_checkpoints/: graph_search-checkpoint.ipynb
examples/: show_cbox.py  show_data.py  show_starfile.py
grace/: README.md  __init__.py  base.py  config.json  config.py  datasets.py  logger.py  napari.yaml  run.py  simulate.py  styling.py
grace/evaluation/: README.md  __init__.py  annotate.py  dim_reduction.py  inference.py  manifold.py  metrics.py  metrics_classifier.py  metrics_objects.py  process.py  utils.py  visualisation.py
grace/io/: __init__.py  cbox.py  core.py  image_dataset.py  mrcdataset.py  schema.py  store_edge_properties.py  store_node_features.py
grace/models/: README.md  classifier.py  datasets.py  feature_extractor.py  graph_laplacian.py  optimise.py  optimiser.py  property_cruncher.py  test.ipynb  train.py  train_and_infer.ipynb
grace/napari/: __init__.py  core.py  main.py  utils.py  widgets.py
grace/simulator/: README.md  simulate_dataset.py  simulate_graph.py  simulate_image.py  simulate_shapes.py  store_features.py
grace/training/: README.md  archiver.py  assess.py  build.py  config.json  config.py  config.yaml  run.py  train.py
grace/utils/: augment_graph.py  augment_image.py  metrics.py  transforms.py  ui.py
grace/visualisation/: animation.py  annotation.py  manifold.py  plotting.py  subgraph.py  utils.py
notebooks/: download_resnet.ipynb  edge_properties.ipynb  edge_props.ipynb  gcn.pt  gcn_train_and_infer.ipynb  graph_cutting_demo.ipynb  graph_features.ipynb  infer_predictions.ipynb  inference.ipynb  inference_random.ipynb  inference_real.ipynb  measure copy.ipynb  measure.ipynb  measure_annotation.ipynb  measure_graph.ipynb  measure_image.ipynb  measure_metrics.ipynb  opt.ipynb  optimise_dummy.ipynb  optimise_graph.ipynb  optimise_graph_fake.ipynb  optimise_graph_tsne.ipynb  optimise_image.ipynb  optimise_structures.ipynb  read_grace.ipynb  run.ipynb  temp.ipynb  train_and_infer.ipynb  trial.ipynb  tsne_and_viz.ipynb
runs/May12_16-18-20_MAC-ATI1231/: events.out.tfevents.1683904700.MAC-ATI1231.51636.1  events.out.tfevents.1683904700.MAC-ATI1231.51636.2
runs/May12_16-19-43_MAC-ATI1231/: events.out.tfevents.1683904783.MAC-ATI1231.51675.1  events.out.tfevents.1683904783.MAC-ATI1231.51675.2
runs/May12_16-21-38_MAC-ATI1231/: events.out.tfevents.1683904898.MAC-ATI1231.51785.1  events.out.tfevents.1683904898.MAC-ATI1231.51785.2
runs/May12_16-25-38_MAC-ATI1231/: events.out.tfevents.1683905138.MAC-ATI1231.51854.1  events.out.tfevents.1683905138.MAC-ATI1231.51854.2
runs/May12_16-29-27_MAC-ATI1231/: events.out.tfevents.1683905367.MAC-ATI1231.51904.1  events.out.tfevents.1683905367.MAC-ATI1231.51904.2
runs/May12_16-29-55_MAC-ATI1231/: events.out.tfevents.1683905395.MAC-ATI1231.51927.1  events.out.tfevents.1683905395.MAC-ATI1231.51927.2
runs/May12_16-32-18_MAC-ATI1231/: events.out.tfevents.1683905538.MAC-ATI1231.51971.1  events.out.tfevents.1683905538.MAC-ATI1231.51971.2
runs/May12_16-41-07_MAC-ATI1231/: events.out.tfevents.1683906067.MAC-ATI1231.52103.1  events.out.tfevents.1683906067.MAC-ATI1231.52103.2
runs/May12_16-43-14_MAC-ATI1231/: events.out.tfevents.1683906194.MAC-ATI1231.52175.1  events.out.tfevents.1683906194.MAC-ATI1231.52175.2
runs/May12_16-45-08_MAC-ATI1231/: events.out.tfevents.1683906308.MAC-ATI1231.52561.1  events.out.tfevents.1683906308.MAC-ATI1231.52561.2
runs/May12_16-45-56_MAC-ATI1231/: events.out.tfevents.1683906356.MAC-ATI1231.52800.1  events.out.tfevents.1683906356.MAC-ATI1231.52800.2
runs/May12_16-47-03_MAC-ATI1231/: events.out.tfevents.1683906423.MAC-ATI1231.52841.1  events.out.tfevents.1683906423.MAC-ATI1231.52841.2
runs/May12_16-47-32_MAC-ATI1231/: events.out.tfevents.1683906452.MAC-ATI1231.52869.1  events.out.tfevents.1683906452.MAC-ATI1231.52869.2
runs/May12_16-48-34_MAC-ATI1231/: events.out.tfevents.1683906514.MAC-ATI1231.52898.1  events.out.tfevents.1683906514.MAC-ATI1231.52898.2
runs/May12_16-49-26_MAC-ATI1231/: events.out.tfevents.1683906566.MAC-ATI1231.52931.1  events.out.tfevents.1683906566.MAC-ATI1231.52931.2
runs/May12_16-50-51_MAC-ATI1231/: events.out.tfevents.1683906651.MAC-ATI1231.52961.1  events.out.tfevents.1683906651.MAC-ATI1231.52961.2
runs/May12_16-51-28_MAC-ATI1231/: events.out.tfevents.1683906688.MAC-ATI1231.52989.1
runs/May12_16-51-29_MAC-ATI1231/: events.out.tfevents.1683906689.MAC-ATI1231.52989.2
runs/May12_16-52-17_MAC-ATI1231/: events.out.tfevents.1683906737.MAC-ATI1231.53020.1  events.out.tfevents.1683906737.MAC-ATI1231.53020.2
runs/May12_16-55-06_MAC-ATI1231/: events.out.tfevents.1683906906.MAC-ATI1231.53083.1  events.out.tfevents.1683906906.MAC-ATI1231.53083.2
runs/May12_16-56-59_MAC-ATI1231/: events.out.tfevents.1683907019.MAC-ATI1231.53137.1  events.out.tfevents.1683907019.MAC-ATI1231.53137.2
runs/May12_16-57-59_MAC-ATI1231/: events.out.tfevents.1683907079.MAC-ATI1231.53174.1
runs/May12_16-58-00_MAC-ATI1231/: events.out.tfevents.1683907080.MAC-ATI1231.53174.6
runs/May12_17-02-56_MAC-ATI1231/: events.out.tfevents.1683907376.MAC-ATI1231.53322.1
runs/May12_17-02-57_MAC-ATI1231/: events.out.tfevents.1683907377.MAC-ATI1231.53322.6
src/grace/: README.md  base.py  config.json  config.py
tests/: _utils.py  conftest.py  test_augmentation.py  test_classifier.py  test_config.py  test_dataset.py  test_dummy.py  test_extractor.py  test_grace.py  test_graphness.py  test_io.py  test_model.py  test_optimiser.py  test_run.py  test_subgraphs.py  test_train.py
(+47 files in other folders)
