[metadata]
name = grace
version = 0.0.1
author = Beatriz Costa Gomes
author_email =
url = https://github.com/alan-turing-institute/grace
project_urls =
  Bug Tracker = https://github.com/alan-turing-institute/grace/issues
  Documentation = https://github.com/alan-turing-institute/grace
  Source Code = https://github.com/alan-turing-institute/grace
  User Support = https://github.com/alan-turing-institute/grace/issues
description = GRACE
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
  torch>=1.12.0
  torchvision>=0.14.1
  torch_geometric
  numpy>=1.17.3
  networkx>=3.0
  scikit-image>=0.16.2
  scipy>=1.3.1
  cvxopt>=1.3.0

[options.extras_require]
napari =
  napari>=0.4.17

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py|examples
per-file-ignores =
  # imported but unused
  __init__.py: F401
