[metadata]
name = grace
version = 0.0.1
author = Beatriz Costa Gomes
author_email =
url = https://github.com/alan-turing-institute/grace
project_urls =
  Bug Tracker = https://github.com/alan-turing-institute/grace/issues
  Documentation = https://github.com/alan-turing-institute/grace
  Source Code = https://github.com/alan-turing-institute/grace
  User Support = https://github.com/alan-turing-institute/grace/issues
description = GRACE
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
  numpy>=1.17.3
  networkx>=3.0
  scikit-image>=0.16.2
  scipy>=1.3.1
  pandas>=1.5.0
  pyarrow
  seaborn

[options.extras_require]
napari =
  napari>=0.4.17
dev =
  cvxopt>=1.3.0
  torch>=1.12.0
  torchvision>=0.14.1
  torch_geometric
  mrcfile
  starfile>=0.4.12
  tensorboard>=2.12.3

[options.entry_points]
napari.manifest =
  grace = grace:napari.yaml

[options.package_data]
grace = grace/napari.yaml
